--- a/Bayesian DNA Barcode Gap.tex
+++ b/Bayesian DNA Barcode Gap.tex
@@ -89,10 +89,10 @@ DNA barcoding \citep{hebert2003biological, hebert2003barcoding} was conceived mo
 
 \subsection{DNA Barcode Gap Metrics}
 
-Recently, \citet{phillips2024measure} proposed novel nonparametric maximum likelihood \\ estimators of proportional overlap/separation between intraspecific and interspecific pairwise genetic distance distributions for a given species ($x$) to aid assessment of the DNA barcode gap as follows:
+Recently, \citet{phillips2024measure} proposed novel nonparametric maximum likelihood \\ estimators (MLEs) of proportional overlap/separation between intraspecific and interspecific pairwise genetic distance distributions for a given species ($x$) to aid assessment of the DNA barcode gap as follows:
 
 \begin{align}
-p_x &= \frac{\#\{d_{ij} \geq \min(d_{XY})\}}{\#\{d_{ij}\}} \\
+p_x &= \frac{\#\{d_{ij} \geq \min(d_{XY})\}}{\#\{d_{ij}\}} \\[1mm]
 q_x &= \frac{\#\{d_{XY} \leq \max(d_{ij})\}}{\#\{d_{XY}\}}
 \end{align}
 
@@ -108,13 +108,11 @@ A major criticism of large sample (frequentist) theory is that it relies on asym
 \widehat{SE[\hat{p}}] = \sqrt{\frac{\hat{p}(1 - \hat{p})}{n}},
 \end{equation}
 
-\noindent where $\hat{p} = \frac{X}{n}$ is the MLE, $X$ is the number of sucesses, and $n$ is the number of trials. However, the above formula is problematic for several reasons. First, Equation (3) makes use of the Central Limit Theorem (CLT); thus, large sample sizes are required for reliable estimation. When few observations are available, SEs will be large and inaccurate, leading to low statistical power. Further, resulting interval estimates could span values less than zero or greater than one, or have zero width, which is practically meaningless. Second, when proprtions are exactly equal to zero or one, resulting SEs will be exactly zero, rendering Equation (3) completely uselesss. In the context of the proposed DNA barcode gap metrics, values obtained at the boundaries of their support are often encountered. Therefore, reliable calculation of SEs is not feasible. Given the importance of sufficient sampling of species genetic diversity for DNA barcoding initiatives, a different statistical estimation approach is necessary. Bayesian inference offers a natural path forward in this regard.
+\noindent where $\hat{p} = \frac{Y}{n}$ is the MLE, $Y$ is the number of successes ($Y = \sum_{i=1}^n{y}$) and $n$ is the number of trials. However, the above formula is problematic for several reasons. First, Equation (3) makes use of the Central Limit Theorem (CLT); thus, large sample sizes are required for reliable estimation. When few observations are available, SEs will be large and inaccurate, leading to low statistical power. Further, resulting interval estimates could span values less than zero or greater than one, or have zero width, which is practically meaningless. Second, when proprtions are exactly equal to zero or one, resulting SEs will be exactly zero, rendering Equation (3) completely uselesss. In the context of the proposed DNA barcode gap metrics, values obtained at the boundaries of their support are often encountered. Therefore, reliable calculation of SEs is not feasible. Given the importance of sufficient sampling of species genetic diversity for DNA barcoding initiatives, a different statistical estimation approach is necessary. Bayesian inference offers a natural path forward in this regard since it allows for direct specification of prior beliefs concerning unknown model parameters and permits the seamless propagation of uncertainty when data is lacking through integration with the likelihood function.
 
 \subsection{The Model}
 
-Counts, $Y$, of overlapping genetic distances (as expressed in the numerator of Equations (1) and (2)) are treated as binomially distributed with expectation $\mathbb{E}[Y] = k\theta$, where \\ $k = \{N, M, C\}$ are total counts of intraspecific, interspecific, and combined genetic distances for a target species, and $\theta = \{p_x, q_x, p^{'}_x, q^{'}_x\}$. Although the metrics encompassing $\theta$ are presumed to follow a beta distribution, for simplicity, the metrics are given standard uniform ($U(0, 1)$) priors, which is mathematically equivalent to a Beta(1, 1) distribution. Such a scheme is mathematically convenient since the beta distribution is conjugate to the binomial distribution. Thus, the posterior distribution is also beta distributed. 
-
-Thus, the full Bayesian model is given by
+Counts, $y$, of overlapping genetic distances (as expressed in the numerator of Equations (1) and (2)) are treated as binomially distributed with expectation $\mathbb{E}[Y] = k\theta$, where \\ $k = \{N, M, C\}$ are total counts of intraspecific, interspecific, and combined genetic distances for a target species, and $\theta = \{p_x, q_x, p^{'}_x, q^{'}_x\}$. Although the metrics encompassing $\theta$ are presumed to follow a beta distribution, for simplicity, they are given uninformative standard uniform ($U(0, 1)$) priors, which is mathematically equivalent to a Beta(1, 1) \\ distribution. Such a scheme is quite convenient since the beta distribution is conjugate to the binomial distribution. Thus, the posterior distribution is also beta distributed. Specifically, the posterior is Beta($Y + 1$, $n - Y + 1$) which has expected value $\mathbb{E}[Y] = \frac{Y \hspace{0.5mm} + \hspace{0.5mm} 1}{n \hspace{0.5mm} + \hspace{0.5mm} 2}$. Thus, the full univariate Bayesian model is given by
 
 \section{Results}
 
