--- a/References.bib
+++ b/References.bib
@@ -1,3 +1,13 @@
+@article{carpenter2017stan,
+title = {Stan: {A} Probabilistic Programming Language},
+journal = {Journal of Statistical Software},
+volume = {76},
+pages = {1},
+year = {2017},
+doi = {10.18637/jss.v076.i01},
+author = {Carpenter, B and Gelman, A and Hoffman, MD and Lee, D and Goodrich, B and Betancourt, M and Brubaker, MA and Guo, J and Li, P and Riddell, A}
+}
+
 @article{hebert2003biological,
   title={Biological identifications through {DNA} barcodes},
   author={Hebert, PDN and Cywinska, A and Ball, SL and deWaard, J},
@@ -18,6 +28,36 @@
   pages={S96--S99},
   year={2003},
   publisher={The Royal Society}
+}
+
+@article{hoffman2014no,
+  title={The {N}o-{U}-{T}urn {S}ampler: {A}daptively Setting Path Lengths in {H}amiltonian {M}onte {C}arlo},
+  author={Hoffman, MD and Gelman, A},
+  journal={Journal of Machine Learning Research},
+  volume={15},
+  pages={1593-1623},
+  year={2014},
+  publisher={}
+}
+
+@article{kingman1982coalescent,
+  author = {Kingman, J.F.C.},
+  title = {The coalescent},
+  journal = {Stochastic Processes and Their Applications},
+  year = {1982},
+  volume = {13},
+  pages = {235--248}
+}
+
+
+@article{meier2008use,
+  title={The Use of Mean Instead of Smallest Interspecific Distances Exaggerates the Size of the ``Barcoding Gap" and Leads to Misidentification},
+  author={Meier, R and Zhang, G and Ali, F},
+  journal={Systematic Biology},
+  volume={57},
+  number={5},
+  pages={809-813},
+  year={2008}
 }
 
 @article{meyer2005dna,
@@ -69,4 +109,53 @@
   pages={e96480},
   year={2023},
   doi={https://doi.org/10.3897/BDJ.11.e96480}
+}
+
+@inbook{phillips2024measure,
+author = {Phillips, JD and Griswold, CK and Young, RG and Hubert, N and Hanner, H},
+editor = {DeSalle, Robert},
+title = {A Measure of the DNA Barcode Gap for Applied and Basic Research},
+bookTitle = {DNA Barcoding: Methods and Protocols},
+year = {2024},
+publisher = {Springer US},
+address = {New York, NY},
+pages = {375--390},
+doi = {10.1007/978-1-0716-3581-0_24},
+}
+
+@article{rannala2003bayes,
+  author = {Rannala, Bruce and Yang, Ziheng},
+  title = {Bayes estimation of species divergence times and ancestral population sizes using DNA sequences from multiple loci},
+  journal = {Genetics},
+  year = {2003},
+  volume = {164},
+  pages = {1645--1656}
+}
+
+@article{ratnasingham2007bold,
+  title={{BOLD}: {T}he {B}arcode of {L}ife {D}ata {S}ystem (http://www. barcodinglife. org)},
+  author={Ratnasingham, S and Hebert, PDN},
+  journal={Molecular Ecology Notes},
+  volume={7},
+  number={3},
+  pages={355--364},
+  year={2007},
+  publisher={Wiley Online Library}
+}
+
+@misc{stan2023rstan,
+  title = {{RStan}: {T}he {R} interface to {Stan}},
+  author = {{Stan Development Team}},
+  note = {R package version 2.21.8},
+  year = {2023},
+  url = {https://mc-stan.org/}
+}
+
+@article{yang2017bayesian,
+  author = {Yang, Ziheng and Rannala, Bruce},
+  title = {Bayesian species identification under the multispecies coalescent provides significant improvements to DNA barcoding analyses},
+  journal = {Molecular Ecology},
+  year = {2017},
+  volume = {26},
+  pages = {3028--3036}
 }
