--- a/Bayesian DNA Barcode Gap.tex
+++ b/Bayesian DNA Barcode Gap.tex
@@ -92,7 +92,7 @@ p_x &= \frac{\#\{d_{ij} \geq \min(d_{XY})\}}{\#\{d_{ij}\}} \\[1mm]
 q_x &= \frac{\#\{d_{XY} \leq \max(d_{ij})\}}{\#\{d_{XY}\}}
 \end{align}
 
-\noindent where $d_{ij}$ and $d_{XY}$ are distances within and among species, respectively, and the notation \# reflects a count. Distances are easily computed from a model of DNA sequence evolution, such as $p$ distance. Similar expressions (denoted $p^{'}_x$ and $q^{'}_x$) for nearest neighbour species were also given (see \cite{phillips2024measure}), in which $d_{XY}$ included only interspecific distances between the species of interest and its closest neighbouring species. If a focal species is found to have multiple nearest neighbours, then the species possessing the smallest average pairwise interspecfic distance is used. While these schemes differ considerably from the usual definition of the DNA barcode gap laid out by \citet{meyer2005dna} and \citet{meier2008use}, they more accurately account for species' coalescence histories inferred from contemporaneous DNA sequences. such as interspecific hybridization/introgression events \citep{phillips2024measure}. Note, distances (and hence the metrics) are constrained to the closed interval [0, 1]. Values of the estimators obtained from equations (1) and (2) close to or equal to zero give evidence for separation between intraspecific and interspecific genetic distance distributions; that is, values suggest the presence of a DNA barcode gap. Conversely, values near or equal to one give evidence for distribution overlap; that is, values likely indicate the absence of a gap.
+\noindent where $d_{ij}$ and $d_{XY}$ are distances within and among species, respectively, and the notation \# reflects a count \textbf{Figure 1}. Distances are easily computed from a model of DNA sequence evolution, such as $p$ distance. Similar expressions (denoted $p^{'}_x$ and $q^{'}_x$) for nearest neighbour species were also given (see \cite{phillips2024measure}), in which $d_{XY}$ included only interspecific distances between the species of interest and its closest neighbouring species. If a focal species is found to have multiple nearest neighbours, then the species possessing the smallest average pairwise interspecfic distance is used. While these schemes differ considerably from the usual definition of the DNA barcode gap laid out by \citet{meyer2005dna} and \citet{meier2008use}, they more accurately account for species' coalescence histories inferred from contemporaneous DNA sequences. such as interspecific hybridization/introgression events \citep{phillips2024measure}. Note, distances (and hence the metrics) are constrained to the closed interval [0, 1]. Values of the estimators obtained from equations (1) and (2) close to or equal to zero give evidence for separation between intraspecific and interspecific genetic distance distributions; that is, values suggest the presence of a DNA barcode gap. Conversely, values near or equal to one give evidence for distribution overlap; that is, values likely indicate the absence of a gap.
 
 
 \subsection{A Bayesian Implementation}
@@ -107,7 +107,7 @@ A major criticism of large sample (frequentist) theory is that it relies on asym
 
 \subsection{The Model}
 
-Essentially, from a statistical perspective, the goal herein is to nonparametrically estimate extreme tail probabilities for positive highly skewed distributions on the unit interval. This is a challenging problem as detailed in subsequent sections.  Counts, $y$, of overlapping genetic distances (as expressed in the numerator of Equations (1) and (2)) are treated as binomially distributed with expectation $\mathbb{E}[Y] = k\theta$, where $k = \{N, M, C\}$ are total counts of \\ intraspecific, interspecific, and combined genetic distances for a target species along with its nearest neighbour species, and $\theta = \{p_x, q_x, p^{'}_x, q^{'}_x\}$. The metrics encompassing $\theta$ are presumed to follow a beta($\alpha$, $\beta$) distribution, with real shape parameters $\alpha$ and $\beta$), which is a natural choice of prior on probabilities. Such a scheme is quite convenient since the beta distribution is conjugate to the binomial distribution. Thus, the posterior distribution is also beta distributed. Parameters were given an uninformative Beta(1, 1) prior, which is equivalent to a standard uniform (Uniform(0, 1)) prior since it places equal probability on all parameter values within its support. As a result, the posterior is Beta($Y + 1$, $n - Y + 1$), which has expected value $\mathbb{E}[Y] = \frac{Y \hspace{0.5mm} + \hspace{0.5mm} 1}{n \hspace{0.5mm} + \hspace{0.5mm} 2}$ and variance $\mathbb{V}[Y] = \frac{(Y \hspace{0.5mm} + \hspace{0.5mm} 1)(n \hspace{0.5mm} - Y \hspace{0.5mm} + \hspace{0.5mm} 1)}{(n \hspace{0.5mm} + \hspace{0.5mm} 2)^2(n \hspace{0.5mm} + \hspace{0.5mm} 3)}$. In general however, when possible, it is always advisable to incorporate prior information, even if only weak, rather than simply imposing complete ignorance in the form of a flat prior distribution. With sufficient data, the choice of prior distribution becomes less important since the \\ posterior will be directly proportional to the likelihood.  The full univariate Bayesian model for species $x$ is thus given by
+Essentially, from a statistical perspective, the goal herein is to nonparametrically estimate probabilities corresponding to extreme tail quantiles for positive highly skewed distributions on the unit interval. This is a challenging computational problem as detailed in subsequent sections. Counts, $y$, of overlapping genetic distances (as expressed in the numerator of Equations (1) and (2)) are treated as binomially distributed with expectation $\mathbb{E}[Y] = k\theta$, where $k = \{N, M, C\}$ are total counts of intraspecific, interspecific, and combined genetic distances for a target species along with its nearest neighbour species, and $\theta = \{p_x, q_x, p^{'}_x, q^{'}_x\}$. The metrics encompassing $\theta$ are presumed to follow a beta($\alpha$, $\beta$) distribution, with real shape parameters $\alpha$ and $\beta$, which is a natural choice of prior on probabilities. Such a scheme is quite convenient since the beta distribution is conjugate to the binomial distribution. Thus, the posterior distribution is also beta distributed. Parameters were given an uninformative Beta(1, 1) prior, which is equivalent to a standard uniform (Uniform(0, 1)) prior since it places equal probability on all parameter values within its support. As a result, the posterior is Beta($Y + 1$, $n - Y + 1$), from which various moments and other quantities, such as the expected value $\mathbb{E}[Y] = \frac{Y \hspace{0.5mm} + \hspace{0.5mm} 1}{n \hspace{0.5mm} + \hspace{0.5mm} 2}$ and variance $\mathbb{V}[Y] = \frac{(Y \hspace{0.5mm} + \hspace{0.5mm} 1)(n \hspace{0.5mm} - Y \hspace{0.5mm} + \hspace{0.5mm} 1)}{(n \hspace{0.5mm} + \hspace{0.5mm} 2)^2(n \hspace{0.5mm} + \hspace{0.5mm} 3)}$, can be easily calculated. In general however, when possible, it is always advisable to incorporate prior information, even if only weak, rather than simply imposing complete ignorance in the form of a flat prior distribution. With sufficient data, the choice of prior distribution becomes less important since the posterior will be directly proportional to the likelihood.  The full univariate Bayesian model for species $x$ is thus given by
 
 \begin{align}
 \notag y_\mathrm{lwr}[x] &\sim \mathrm{Binomial}(N[x], p_\mathrm{lwr}[x]) \\ 
@@ -118,7 +118,7 @@ y^{'}_\mathrm{lwr}[x] &\sim \mathrm{Binomial}(N[x], p^{'}_\mathrm{lwr}[x]) \\
 &\sim \mathrm{Beta}(1, 1).
 \end{align}
 
-The model was fitted using the Stan probabilistic programming language  \citep{carpenter2017stan} framework for Hamiltonian Monte Carlo (HMC) via the No-U-Turn Sampler (NUTS) algorithm \citep{hoffman2014no} sampling through the {\tt rstan} R package \citep{stan2023rstan}. Four chains were run for 2000 iterations each in parallel across four cores with random paramester initializations. Within each chain, a total of 1000 samples was discarded as warmup (\textit{i.e.}, burnin) to reduce dependence on starting conditions. Further, 1000 post-warmup draws were utilized per chain. Each of these reflect default MCMC settings in Stan. Since the DNA barcode gap metrics often attain values very close to zero and/or very near one, in addition to more intermediate values, a Beta($\frac{1}{2}, \frac{1}{2}$) prior, which is U-shaped symmetric and places greater probability density at the extremes of the distribution due to its heavier tails, while still allowing for variability in parameter estimates within intermediate values along its domain, was also attempted. However, this resulted in several divergent transitions, among other pathologies, imposed by complex geometry (\textit{i.e.}, curvature) in the posterior space, despite remedies to resolve them, such as lowering the step size of the HMC sampler. Note that this prior is Jeffreys' prior, which is proportional to the square root of the Fisher information and has several desirable statistical properties, most notably invariance to reparameterization.
+The model was fitted using the Stan probabilistic programming language  \citep{carpenter2017stan} framework for Hamiltonian Monte Carlo (HMC) via the No-U-Turn Sampler (NUTS) algorithm \citep{hoffman2014no} sampling through the {\tt rstan} R package \citep{stan2023rstan}. Four chains were run for 2000 iterations each in parallel across four cores with random paramester initializations. Within each chain, a total of 1000 samples was discarded as warmup (\textit{i.e.}, burnin) to reduce dependence on starting conditions. Further, 1000 post-warmup draws were utilized per chain. Because HMC/NUTS results in dependent samples that are minimally autocorrelated, Markov chain thinning is not required. Each of these reflect default MCMC settings in Stan. Since the DNA barcode gap metrics often attain values very close to zero and/or very near one, in addition to more intermediate values, a Beta($\frac{1}{2}, \frac{1}{2}$) prior, which is U-shaped symmetric and places greater probability density at the extremes of the distribution due to its heavier tails, while still allowing for variability in parameter estimates within intermediate values along its domain, was also attempted. However, this resulted in several divergent transitions, among other pathologies, imposed by complex geometry (\textit{i.e.}, curvature) in the posterior space, despite remedies to resolve them, such as lowering the step size of the HMC sampler. Note that this prior is Jeffreys' prior, which is proportional to the square root of the Fisher information and has several desirable statistical properties, most notably invariance to reparameterization.
 
 
 
@@ -141,7 +141,7 @@ Raw data, R, and Stan code can be found on GitHub at: \\ https://github.com/jphi
 
 \section*{Acknowledgements}
 
-We wish to recognise the valuable comments and discussions of Daniel (Dan) Gillis, Robert (Bob) Hanner,R obert (Rob) Young, and XXX anonymous reviewers.
+We wish to recognise the valuable comments and discussions of Daniel (Dan) Gillis, Robert (Bob) Hanner, Robert (Rob) Young, and XXX anonymous reviewers.
 
 We acknowledge that the University of Guelph resides on the ancestral lands of the Attawandaron people and the treaty lands and territory of the Mississaugas of the Credit. We recognize the significance of the Dish with One Spoon Covenant to this land and offer our respect to our Anishinaabe, Haudenosaunee and M{\'e}tis neighbours as we strive to strengthen our relationships with them.
 
@@ -159,6 +159,18 @@ JDP wrote the manuscript, wrote R and Stan code, approved all developed code as 
 
 \bibliographystyle{humannat}
 \bibliography{References}
+
+\section*{Figures}
+
+\begin{figure}[H]
+
+\centering
+
+\includegraphics[width=1.0\textwidth]{Figure 1}
+
+\caption{Depiction of the overlap/separation of pairwise intraspecific and interspecific genetic distances ($\delta$) for calculation of the DNA barcode gap metrics for species $x$.}
+
+\end{figure}
 
 
 \end{document}
